--- a/aruco_detect/CMakeLists.txt
+++ b/aruco_detect/CMakeLists.txt
@@ -65,7 +65,7 @@ catkin_install_python(PROGRAMS scripts/create_markers.py
 install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
-install(DIRECTORY include/${PROJECT_NAME}
+install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
 install(FILES nodelet_plugins.xml
